[metadata]
name = chasm
description = The game client for Chasm, a multi-player text adventure driven by large language models.
url = https://github.com/atisharma/chasm
author = Ati Sharma
author_email = ati.sharma+chasm@agalmic.ltd
keywords = chasm, text adventure, interactive fiction
license = GNU AFFERO GENERAL PUBLIC LICENSE V3
license_files = LICENSE
long_description = file: README.md


[options]
python_requires = >= 3.9
install_requires = file: requirements.txt
include_package_data = True
package_dir = 
packages = find:

[options.entry_points]
console_scripts =
    chasm = chasm.repl:run

[options.packages.find]
where = 

[options.package_data]
* = *.hy
